--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "^0.2.9",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-gesture-handler": "~2.9.0"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-paper": "^5.6.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
